# TED

./: .gitmodules  CMakeLists.txt  README.md
TermEngine/include/TermEngine/core/: process_class.hpp  process_manager_class.hpp
TermEngine/lib/TermEngine/core/: process_manager_class.cpp
TermEngine/lib/TermEngine/input/: mouse.cpp
engine/: .gitignore
engine/include/TermEngine/: core.hpp
engine/include/TermEngine/video/: color.hpp  video.hpp
engine/lib/TermEngine/: CMakeLists.txt
engine/lib/TermEngine/core/: process_class.cpp
engine/lib/TermEngine/video/: color.cpp
engine/test-features/: a.out
include/TermEngine/core/: log.hpp  manager.hpp
include/TermEngine/input/: mouse.hpp
lib/TermEngine/core/: log.cpp  manager.cpp
lib/TermEngine/video/: video.cpp
src/: classes.hpp  main.cpp
test-features/: IO.cpp
tests/: CMakeLists.txt  core.test.cpp
